--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,33 @@
+h1, h2, h3, h4, h5, h6 {
+  margin-top: .2em;
+  margin-bottom: .2em;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+p {
+  line-height: 1.75;
+  letter-spacing: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
+  overflow-wrap: break-word;
+  hyphens: auto;
+  margin: 1em 0;
+}
+
+hr {
+  border: none;
+  border-top: .2em dashed grey;
+  margin: 2em 0;
+}
+
 :root {
-  --max-width: 1100px;
+  max-width: var(--max-width);
+  font-size: 1.2em;
+
+  --grey: 'grey';
+  --max-width: 750px;
+  margin: auto;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
