--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 h1, h2, h3, h4, h5, h6 {
-  margin-top: .2em;
-  margin-bottom: .2em;
+  margin-top: .1em;
+  margin-bottom: .1em;
   overflow-x: auto;
   overflow-y: hidden;
 }
@@ -125,7 +125,7 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: dark) {
