--- a/app/globals.css
+++ b/app/globals.css
@@ -110,7 +110,6 @@ hr {
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
@@ -125,7 +124,14 @@ body {
 
 a {
   color: inherit;
-  text-decoration: underline;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+  border-bottom: 1px solid transparent;
+}
+
+a:hover {
+  border-bottom: 1px solid;
 }
 
 @media (prefers-color-scheme: dark) {
