--- a/app/globals.css
+++ b/app/globals.css
@@ -29,14 +29,8 @@ blockquote {
   /* border-left: 0.25em solid var(--grey); */
 }
 
-ul, ol {
-  padding-left: 1.2em;
-  margin: 1em 0;
-}
-
 li {
-  /* padding-left: 0.2em; */
-  margin: 1em 0;
+  margin: 0 1.5em;
 }
 
 table {
