--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,9 @@
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: .1em;
   margin-bottom: .1em;
   overflow-x: auto;
@@ -22,11 +27,11 @@ hr {
 }
 
 blockquote {
-  /* color: var(--normal); */
+  color: var(--normal);
   font-family: "Times, SimSun, serif";
   margin: 0;
   padding-left: 1.2em;
-  /* border-left: 0.25em solid var(--grey); */
+  border-left: 0.25em solid var(--grey);
 }
 
 li {
@@ -41,19 +46,21 @@ table {
   margin: .75em .075em;
 }
 
-table td, table th {
+table td,
+table th {
   border: .075em solid;
   padding: .25em .5em;
 }
 
-table tr:nth-child(even), table thead {
-  /* background-color: var(--bgHover); */
+table tr:nth-child(even),
+table thead {
+  background-color: var(--bgHover);
 }
 
 code {
   overflow: auto;
   font-family: 'Courier New', Courier, monospace;
-  /* background: var(--bgHover); */
+  background: var(--bgHover);
   border-radius: .2em;
 }
 
@@ -72,8 +79,17 @@ img {
   background: var(--background);
   background-attachment: fixed, local;
 
-  --background: linear-gradient(165deg, hsl(206, 76%, 53%),hsl(205, 81%, 61%), hsl(207, 77%, 66%), hsl(207, 78%, 72%), hsl(207, 74%, 72%), hsl(207, 60%, 76%), hsl(48, 45%, 81%));
-  --grey: 'grey';
+  --background: linear-gradient(165deg, hsl(206, 76%, 53%), hsl(205, 81%, 61%), hsl(207, 77%, 66%), hsl(207, 78%, 72%), hsl(207, 74%, 72%), hsl(207, 60%, 76%), hsl(48, 45%, 81%));
+  --bg: rgb(148, 186, 217);
+  --bgHover: rgba(255, 255, 255, 0.16);
+  --border: rgba(255, 255, 255, 0.48);
+  --normal: rgb(15, 24, 31);
+  --emphases: #000024;
+  --grey: #223344;
+  --link: #0a3151;
+  --linkhover: #0e5781;
+  --success: rgba(0, 200, 0, 0.4);
+
   --max-width: 750px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -84,30 +100,24 @@ img {
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -117,30 +127,37 @@ img {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: linear-gradient(165deg, hsl(228, 58%, 8%), hsl(230, 53%, 11%),hsl(229, 51%, 11%), hsl(224, 54%, 15%), hsl(224, 55%, 18%), hsl(207, 53%, 21%), hsl(94, 17%, 23%), hsl(36, 50%, 31%));
+    --background: linear-gradient(165deg, hsl(228, 58%, 8%), hsl(230, 53%, 11%), hsl(229, 51%, 11%), hsl(224, 54%, 15%), hsl(224, 55%, 18%), hsl(207, 53%, 21%), hsl(94, 17%, 23%), hsl(36, 50%, 31%));
+    --bg: #192033;
+    --bgHover: rgba(160, 222, 255, 0.05);
+    --border: rgba(160, 222, 255, 0.2);
+    --normal: aliceblue;
+    --emphases: white;
+    --grey: rgb(131, 149, 162);
+    --link: #c1eaff;
+    --linkhover: #fdffef;
+    --success: rgba(0, 200, 0, 0.4);
+    --error: #a06020;
+
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -171,7 +188,7 @@ body {
 }
 
 a {
-  color: inherit;
+  color: var(--link);
   text-decoration: none;
   transition: all .2s ease-in-out;
   -webkit-transition: all .2s ease-in-out;
@@ -179,6 +196,7 @@ a {
 }
 
 a:hover {
+  color: var(--linkhover);
   border-bottom: 1px solid;
 }
 
